@@ -153,30 +153,11 @@ public final class UpdatePerformer extends AbstractUserizedFolderPerformer {
             {
                 final String newParentId = folder.getParentID();
                 move = (null != newParentId && !newParentId.equals(oldParentId));
-                if (move && !"infostore".equals(storageFolder.getContentType().toString())) {
-                    /*
-                     * Check for duplicate
-                     */
-                    CheckForDuplicateResult result = getCheckForDuplicateResult(folder.getName(), treeId, newParentId, openedStorages);
-                    if (null != result) {
-                        final boolean autoRename = AJAXRequestDataTools.parseBoolParameter(getDecoratorStringProperty("autorename"));
-                        if (!autoRename) {
-                            throw result.error;
-                        }
-                        final boolean useParenthesis = PARENTHESIS_CAPABLE.contains(storageFolder.getContentType().toString());
-                        int count = 2;
-                        final StringBuilder nameBuilder = new StringBuilder(folder.getName());
-                        final int resetLen = nameBuilder.length();
-                        do {
-                            nameBuilder.setLength(resetLen);
-                            if (useParenthesis) {
-                                nameBuilder.append(" (").append(count++).append(')');
-                            } else {
-                                nameBuilder.append(" ").append(count++);
-                            }
-                            result = getCheckForDuplicateResult(nameBuilder.toString(), treeId, newParentId, openedStorages);
-                        } while (null != result);
-                        folder.setName(nameBuilder.toString());
+                if (move) {
+                    if ("infostore".equals(storageFolder.getContentType().toString())) { // Maybe something special to consider as not synchronized with OL
+                        checkForDuplicateOnMove(folder, treeId, openedStorages, storageFolder, newParentId);
+                    } else {
+                        checkForDuplicateOnMove(folder, treeId, openedStorages, storageFolder, newParentId);
                     }
                 }
             }
@@ -184,30 +165,11 @@ public final class UpdatePerformer extends AbstractUserizedFolderPerformer {
             {
                 final String newName = folder.getName();
                 rename = (null != newName && !newName.equals(storageFolder.getName()));
-                if (rename && !"infostore".equals(storageFolder.getContentType().toString())) {
-                    /*
-                     * Check for duplicate
-                     */
-                    CheckForDuplicateResult result = getCheckForDuplicateResult(newName, treeId, storageFolder.getParentID(), openedStorages);
-                    if (null != result) {
-                        final boolean autoRename = AJAXRequestDataTools.parseBoolParameter(getDecoratorStringProperty("autorename"));
-                        if (!autoRename) {
-                            throw result.error;
-                        }
-                        final boolean useParenthesis = PARENTHESIS_CAPABLE.contains(storageFolder.getContentType().toString());
-                        int count = 2;
-                        final StringBuilder nameBuilder = new StringBuilder(folder.getName());
-                        final int resetLen = nameBuilder.length();
-                        do {
-                            nameBuilder.setLength(resetLen);
-                            if (useParenthesis) {
-                                nameBuilder.append(" (").append(count++).append(')');
-                            } else {
-                                nameBuilder.append(" ").append(count++);
-                            }
-                            result = getCheckForDuplicateResult(nameBuilder.toString(), treeId, storageFolder.getParentID(), openedStorages);
-                        } while (null != result);
-                        folder.setName(nameBuilder.toString());
+                if (rename) {
+                    if ("infostore".equals(storageFolder.getContentType().toString())) { // Maybe something special to consider as not synchronized with OL
+                        checkForDuplicateOnRename(folder, treeId, openedStorages, storageFolder, newName, false);
+                    } else {
+                        checkForDuplicateOnRename(folder, treeId, openedStorages, storageFolder, newName, false);
                     }
                 }
             }
@@ -398,6 +360,60 @@ public final class UpdatePerformer extends AbstractUserizedFolderPerformer {
         }
 
     } // End of doUpdate()
+
+    private void checkForDuplicateOnMove(final Folder folder, final String treeId, final List<FolderStorage> openedStorages, final Folder storageFolder, final String newParentId) throws OXException {
+        /*
+         * Check for duplicate
+         */
+        CheckForDuplicateResult result = getCheckForDuplicateResult(folder.getName(), treeId, newParentId, openedStorages);
+        if (null != result) {
+            final boolean autoRename = AJAXRequestDataTools.parseBoolParameter(getDecoratorStringProperty("autorename"));
+            if (!autoRename) {
+                throw result.error;
+            }
+            final boolean useParenthesis = PARENTHESIS_CAPABLE.contains(storageFolder.getContentType().toString());
+            int count = 2;
+            final StringBuilder nameBuilder = new StringBuilder(folder.getName());
+            final int resetLen = nameBuilder.length();
+            do {
+                nameBuilder.setLength(resetLen);
+                if (useParenthesis) {
+                    nameBuilder.append(" (").append(count++).append(')');
+                } else {
+                    nameBuilder.append(" ").append(count++);
+                }
+                result = getCheckForDuplicateResult(nameBuilder.toString(), treeId, newParentId, openedStorages);
+            } while (null != result);
+            folder.setName(nameBuilder.toString());
+        }
+    }
+
+    private void checkForDuplicateOnRename(final Folder folder, final String treeId, final List<FolderStorage> openedStorages, final Folder storageFolder, final String newName, final boolean allowAutoRename) throws OXException {
+        CheckForDuplicateResult result = getCheckForDuplicateResult(newName, treeId, storageFolder.getParentID(), openedStorages);
+        if (null != result) {
+            if (!allowAutoRename) {
+                throw result.error;
+            }
+            final boolean autoRename = AJAXRequestDataTools.parseBoolParameter(getDecoratorStringProperty("autorename"));
+            if (!autoRename) {
+                throw result.error;
+            }
+            final boolean useParenthesis = PARENTHESIS_CAPABLE.contains(storageFolder.getContentType().toString());
+            int count = 2;
+            final StringBuilder nameBuilder = new StringBuilder(folder.getName());
+            final int resetLen = nameBuilder.length();
+            do {
+                nameBuilder.setLength(resetLen);
+                if (useParenthesis) {
+                    nameBuilder.append(" (").append(count++).append(')');
+                } else {
+                    nameBuilder.append(" ").append(count++);
+                }
+                result = getCheckForDuplicateResult(nameBuilder.toString(), treeId, storageFolder.getParentID(), openedStorages);
+            } while (null != result);
+            folder.setName(nameBuilder.toString());
+        }
+    }
 
     private MovePerformer newMovePerformer() {
         if (null == session) {
