@@ -1,3 +1,7 @@
+* 2013-12-24 - thorben.betten@open-xchange.com
+
+ - Fix for bug 30236: Properly check for duplicate folder on folder rename operation
+
 * 2013-12-21 - martin.schneider@open-xchange.com
 
  - Fix for bug 30250: Publication disclaimer with configurable company name
